# TDDLinux

./: CMakeLists.txt  CMakePresets.json  Cir_import.h  Definitions.hpp  LookaheadPlanning.hpp  NNUtil.hpp  Planning.hpp  QueuePlanning.hpp  README.md  TDDLinux.cpp  TDDLinux.h  main.cpp
dd/: CMakeLists.txt  Complex.hpp  ComplexNumbers.hpp  ComplexTable.hpp  Definitions.hpp  Edge.cpp  Edge.hpp  Export.hpp  GateMatrixDefinitions.hpp  Node.hpp  Package.hpp  Tdd.hpp
operations/: CMakeLists.txt  Expression.cpp
parsers/: CMakeLists.txt
